# notes-to-icd10

./: .gitignore  LM_Studio.md  Prj_Overview.md  README.md  REFACTORING_PLAN.md  Run notes.md  Run_notes.md  artifacts.yaml  check.md  project_notes.md  pyproject.toml  upload_to_hf.py  verify_scripts.py
.dvc/: config
data/gold/: MANIFEST_medsynth_gold_apso_20260505_194721.json  MANIFEST_medsynth_gold_apso_20260505_194721.json.dvc  cdc_fy2026_icd10.parquet.dvc  medsynth_gold_apso_20260505_194721.parquet.dvc  medsynth_gold_apso_v1.0.parquet.dvc
data/medsynth/: .gitignore  icd10_notes.parquet.dvc
data/ontology/: .gitignore  doid_icd10cm.json  icd10cm_2026.parquet.dvc  z_dictionary.json
data/raw/: medsynth_notes_v2024.parquet.dvc
notebooks/: 01-EDA_SOAP 1.ipynb  01-EDA_SOAP.ipynb  02-Model_ClinicalBERT_Baseline_ICD3.ipynb  03-Model_ClinicalBERT_Surgical_ICD10.ipynb  04-Model_Hierarchical_ICD10.ipynb  05-Model_Hierarchical_ICD10_E002Init.ipynb  05_a-Model_Hierarchical_ICD10_E002Init.ipynb  Notebook_pipline_Overview.md  OD_04-Model_Hierarchical_ICD10.ipynb
notebooks/resources/papers/Our_paper/: our_paper.md  our_paper_notes.md  paper_corrected.md
notebooks/utils/: nb_setup.py
outputs/: experiments.json  figure_index.json
outputs/evaluations/E-001_Baseline_ICD3/metadata/: dataset_info.json
outputs/evaluations/E-002_FullICD10_ClinicalBERT/: calibration_report.json  train_result.json
outputs/evaluations/E-002_FullICD10_ClinicalBERT/stage2/: stage2_results.json
outputs/evaluations/E-002_FullICD10_ClinicalBERT_Aug/: config.json  label_map.json  train_result.json
outputs/evaluations/E-003_Hierarchical_ICD10/: e2e_results.json
outputs/evaluations/E-003_Hierarchical_ICD10/stage1/: chapter_mapping.json  label_map.json  temperature.json
outputs/evaluations/E-003_Hierarchical_ICD10/stage2/: stage2_results.json
outputs/evaluations/E-004a_Hierarchical_E002Init/: calibration_report.json
outputs/evaluations/E-004a_Hierarchical_ICD10_E002Init/: e2e_results.json
outputs/evaluations/E-005a_Hierarchical_ICD10_Extended/: e2e_results.json
outputs/evaluations/E-006_Hierarchical_Clean/: calibration_report.json
outputs/evaluations/E-008_Balanced/: calibration_report.json
outputs/evaluations/E-009_Balanced_E002Init/: calibration_report.json
outputs/evaluations/E-010_40ep_E002Init/: calibration_report.json
publications/notes_to_icd10/: _quarto.yml  index.qmd  references.bib
publications/notes_to_icd10/sections/: 01_executive_summary.qmd  02_introduction.qmd  03_dataset.qmd  04_methodology.qmd  05_experiments.qmd  06_results.qmd  07_pipeline.qmd  08_limitations.qmd  09_conclusions.qmd  metrics_explainer.qmd
scripts/: Script_Pipeline_Overview.md  augment.py  build_graph.py  build_z_dict.py  calibrate.py  cleanup.py  cluster_analysis.py  evaluate.py  evaluate_real_reranker.py  evaluate_reranker.py  extract_doid_icd10.py  extract_embeddings.py  fetch_raw_medsynth.py  generate_manifest.py  generate_simcse_pairs.py  predict.py  prepare_data.py  prepare_splits.py  run_experiment.py  serve.py  train.py  train_simcse.py
src/: adapters.py  config.py  data_loader.py  dataset.py  evaluation.py  experiment_logger.py  gatekeeper.py  graph_reranker.py  inference.py  paths.py  plot_utils.py  preprocessing.py  server.py
tests/: test_experiment_logger.py  test_hierarchical_predictor.py  test_inference_validation.py  test_paths.py  test_preprocessing.py  test_z_matcher.py
(+310 files in other folders)
