[project]
name = "icd10-code-prediction"
version = "0.1.0"
description = "Surgical ICD-10 prediction from clinical text using ClinicalBERT and Polars/DuckDB"
requires-python = ">=3.10,<3.13"

dependencies = [
    # --- High-Performance Data Engineering (The Pivot) ---
    "polars[all]>=1.0.0",
    "duckdb>=1.1.0",
    "pyarrow>=15.0.0",
    # --- Core Data & Math ---
    "numpy>=1.26,<2.0",
    "pandas>=2.2.0",
    "scipy>=1.11.0",
    # --- ML / Deep Learning (M4 Max Optimized) ---
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "sentence-transformers>=2.5.0",
    "datasets>=2.18.0",
    "tokenizers>=0.15.0",
    "accelerate>=0.27.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.4.0",
    # --- Validation & Schema ---
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # --- Experiment Tracking & Logging ---
    "mlflow>=2.11.0",
    "tensorboard>=2.19.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    # --- Notebooks & Visualization ---
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "panel>=1.3.0",
    "jupyter_bokeh",
    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "pathlib>=1.0.1",
    # --- Compatibility fix ---
    "setuptools<81",
    "nbstripout>=0.9.1",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "pydantic-ai>=1.84.1",
    "scispacy>=0.5.5",
    "en-core-sci-md",
    "en-ner-bc5cdr-md",
    "hdbscan>=0.8.42",
    "umap-learn>=0.5.12",
    "tabulate>=0.10.0",
    "pyopenssl>=26.1.0",
    "huggingface-hub>=1.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "dvc[gdrive]>=3.67.1",
]

[tool.uv.sources]
en-core-sci-md = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_md-0.5.4.tar.gz" }
en-ner-bc5cdr-md = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz" }
